[gd_scene load_steps=2 format=3 uid="uid://cxjepfowlijvp"]

[ext_resource type="Script" path="res://menu.gd" id="1_7804p"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_7804p")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.262745, 0.603922, 0.117647, 0.435294)

[node name="MarginContainer" type="MarginContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -287.0
offset_top = -165.5
offset_right = 287.0
offset_bottom = 165.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="ColorRect/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "R:
"
horizontal_alignment = 1

[node name="SliderR" type="HSlider" parent="ColorRect/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 255.0

[node name="HBoxContainer3" type="HBoxContainer" parent="ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="ColorRect/MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
text = "G:
"
horizontal_alignment = 1

[node name="SliderG" type="HSlider" parent="ColorRect/MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 255.0

[node name="HBoxContainer4" type="HBoxContainer" parent="ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="ColorRect/MarginContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3
text = "B:
"
horizontal_alignment = 1

[node name="SliderB" type="HSlider" parent="ColorRect/MarginContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 255.0

[connection signal="value_changed" from="ColorRect/MarginContainer/VBoxContainer/HBoxContainer/SliderR" to="." method="_on_slider_r_value_changed"]
[connection signal="drag_ended" from="ColorRect/MarginContainer/VBoxContainer/HBoxContainer3/SliderG" to="." method="_on_slider_g_drag_ended"]
[connection signal="value_changed" from="ColorRect/MarginContainer/VBoxContainer/HBoxContainer3/SliderG" to="." method="_on_slider_g_value_changed"]
[connection signal="drag_ended" from="ColorRect/MarginContainer/VBoxContainer/HBoxContainer4/SliderB" to="." method="_on_slider_b_drag_ended"]
[connection signal="value_changed" from="ColorRect/MarginContainer/VBoxContainer/HBoxContainer4/SliderB" to="." method="_on_slider_b_value_changed"]
